# vectrify

./: .gitignore  README.md  TODO  main.py  pyproject.toml
.github/workflows/: build.yml  release.yml
scripts/: analyze_profile.py  clean_runs.py  plot_run.py
src/svgizer/: cli.py  dashboard.py  diff_scores.py  generation.py  image_utils.py  main.py  models.py  openai_iface.py  pipeline.py  search.py  storage.py  svg_adapter.py  utils.py  worker.py
src/svgizer/diff/: __init__.py  base.py  dreamsim.py  llm_judge.py  simple.py  utils.py
src/svgizer/formats/: base.py  models.py
src/svgizer/formats/graphviz/: operations.py  plugin.py  prompts.py
src/svgizer/formats/svg/: operations.py  plugin.py  prompts.py
src/svgizer/formats/typst/: operations.py
src/svgizer/llm/: __init__.py  anthropic.py  base.py  client.py  gemini.py  openai.py
src/svgizer/score/: __init__.py  base.py  complexity.py  dreamsim.py  llm_judge.py  simple.py  utils.py  vision.py
src/svgizer/search/: __init__.py  base.py  collector.py  diversity.py  engine.py  genetic.py  greedy.py  models.py  nsga.py  search.py  stats.py  utils.py
src/svgizer/svg/: __init__.py  adapter.py  operations.py  prompts.py  runner.py  storage.py  worker.py
src/svgizer/tests/: test_cli.py  test_diff_scores.py  test_image_utils.py  test_pipeline.py  test_storage.py
src/svgizer/tests/diff/: test_llm_judge.py  test_simple.py
src/svgizer/tests/formats/graphviz/: test_operations.py  test_plugin.py  test_prompts.py
src/svgizer/tests/formats/svg/: test_llm_calls.py  test_operations.py  test_plugin.py  test_prompts.py
src/svgizer/tests/formats/typst/: test_operations.py
src/svgizer/tests/llm/: test_client.py
src/svgizer/tests/score/: test_complexity.py  test_dreamsim.py  test_get_scorer.py  test_llm_judge.py  test_scorer_base.py  test_simple.py  test_vision.py
src/svgizer/tests/search/: test_base.py  test_diversity.py  test_engine.py  test_genetic.py  test_greedy.py  test_models.py  test_nsga.py  test_search.py  test_utils.py
src/svgizer/tests/svg/: test_adapter.py  test_llm_calls.py  test_operations.py  test_prompts.py  test_runner.py  test_storage.py
src/svgizer/tests/vector/: test_adapter.py  test_resume.py  test_runner.py  test_storage.py  test_worker.py
src/svgizer/vector/: adapter.py  resume.py  runner.py  storage.py  worker.py
src/vectrify/: cli.py  dashboard.py  image_utils.py  main.py
src/vectrify/formats/: base.py  models.py
src/vectrify/formats/graphviz/: operations.py  plugin.py
src/vectrify/formats/svg/: operations.py  plugin.py
src/vectrify/formats/typst/: operations.py  plugin.py  prompts.py
src/vectrify/llm/: __init__.py  anthropic.py  base.py  gemini.py  openai.py
src/vectrify/score/: __init__.py  base.py  complexity.py  llm_judge.py  simple.py  utils.py  vision.py
src/vectrify/search/: __init__.py  base.py  beam.py  collector.py  diversity.py  engine.py  models.py  nsga.py  stats.py
src/vectrify/tests/: test_cli.py  test_image_utils.py
src/vectrify/tests/formats/graphviz/: test_operations.py  test_plugin.py  test_prompts.py
src/vectrify/tests/formats/svg/: test_operations.py  test_plugin.py  test_prompts.py
src/vectrify/tests/formats/typst/: test_operations.py  test_plugin.py  test_prompts.py
src/vectrify/tests/score/: test_complexity.py  test_get_scorer.py  test_llm_judge.py  test_scorer_base.py  test_simple.py  test_vision.py
src/vectrify/tests/search/: test_beam.py  test_diversity.py  test_engine.py  test_models.py  test_nsga.py
src/vectrify/tests/vector/: test_adapter.py  test_resume.py  test_runner.py  test_storage.py  test_worker.py
src/vectrify/vector/: adapter.py  resume.py  runner.py  storage.py  worker.py
