[project]
name = "svgizer"
version = "0.1.0"
description = "Iterative SVG refinement using OpenAI multimodal models"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "openai>=1.0.0",
    "cairosvg>=2.7.0",
    "pillow>=10.0.0",
    "numpy>=2.2.6",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "dreamsim>=0.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pyrefly",
]

[project.scripts]
svgizer = "svgizer.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "llm: marks tests that require live LLM API calls",
]

[tool.pyrefly]
include = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "C4",
    "PT",
    "RET",
    "SIM",
    "PTH",
    "PIE",
    "ARG",
    "RUF",
]
ignore = []